profile integration test - fix incompatibilidade lombox mapstruct